--- a/.github/workflows/deploy_cosmos.yml
+++ b/.github/workflows/deploy_cosmos.yml
@@ -11,12 +11,13 @@ permissions:
 
 jobs:
   deploy_cosmos:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          node-version: 18
+          version: 9
 
       - name: Run cosmos:build to build static
         run: |
@@ -24,7 +25,7 @@ jobs:
           pnpm run cosmos:build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        uses: JamesIves/github-pages-deploy-action@v4.6
         with:
           branch: gh-pages
           folder: cosmos-export
