--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -24,7 +24,7 @@ jobs:
   run_tests:
     name: Run e2e tests
     timeout-minutes: 60
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       ENVIRONMENT: ${{ github.event.inputs.env }}
       APP_NAME: ${{ github.event.inputs.app }}
@@ -36,11 +36,7 @@ jobs:
       PROD_PASSWORD: ${{ secrets.PROD_PASSWORD }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+        uses: actions/checkout@v4
       - name: Create .env file
         shell: bash
         run: |
@@ -57,7 +53,7 @@ jobs:
 
       - name: Cache node modules
         id: cache-npm
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         env:
           cache-name: playwright-cache
         with:
