--- a/.github/workflows/translations_report.yml
+++ b/.github/workflows/translations_report.yml
@@ -31,6 +31,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
       - run: pnpm i
       - run: pnpm run --silent i18n:report -- --out md > ./.github/workflows/translations-report.md
+      - run: cat ./.github/workflows/translations-report.md
       - name: Comment
         uses: NejcZdovc/comment-pr@v2.1.0
         with:
