fix(ci): 17827 update actions to actual versions, use image with node 20 (#732)
* update actions to actual versions, use image with node 20

* fix versions

* debug

* fix translations-report

--- a/.github/workflows/translations_report.yml
+++ b/.github/workflows/translations_report.yml
@@ -17,9 +17,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          node-version: '20'
-      - run: corepack enable
-      - run: corepack prepare pnpm@9 --activate
+          version: 9
       - name: Get pnpm store directory
         shell: bash
         run: |
