--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          node-version: '20'
-
-      - run: corepack enable
-      - run: corepack prepare pnpm@9 --activate
+          version: 9
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -57,17 +54,17 @@ jobs:
       - shell: bash
         run: |
           status=$(git status --porcelain)
-          if [ -n "$status" ]; then
-            # debug stuff
-            echo "You have gettext translation files unsynced. Please run i18n:gettext-sync locally."
-            echo "$status"
-            diff=$(git diff --color)
-            echo "$diff"
-            echo ""
-            echo "corepack v$(corepack --version)"
-            echo "pnpm v$(pnpm --version)"
-            # endof debug stuff
-            exit 1
+            if [ -n "$status" ]; then
+              # debug stuff
+              echo "$status"
+              diff=$(git diff --color)
+              echo "$diff"
+              echo ""
+              echo "corepack v$(corepack --version)"
+              echo "pnpm v$(pnpm --version)"
+              # endof debug stuff
+              echo "You have gettext translation files unsynced. Please run i18n:gettext-sync locally."
+              exit 1
           else
             echo "Translations are synced."
           fi
@@ -87,9 +84,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          node-version: '20'
-      - run: corepack enable
-      - run: corepack prepare pnpm@9 --activate
+          version: 9
       - name: Get pnpm store directory
         shell: bash
         run: |
