up github actions pnpm to v9

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,10 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          node-version: '20'
+
+      - run: corepack enable
+      - run: corepack prepare pnpm@9 --activate
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -84,7 +87,9 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          node-version: '20'
+      - run: corepack enable
+      - run: corepack prepare pnpm@9 --activate
       - name: Get pnpm store directory
         shell: bash
         run: |
