--- a/.github/workflows/size_report.yml
+++ b/.github/workflows/size_report.yml
@@ -20,7 +20,10 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          node-version: '20'
+
+      - run: corepack enable
+      - run: corepack prepare pnpm@9 --activate
 
       - name: Get pnpm store directory
         shell: bash
@@ -59,7 +62,10 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          node-version: '20'
+
+      - run: corepack enable
+      - run: corepack prepare pnpm@9 --activate
 
       - name: Get pnpm store directory
         shell: bash
