--- a/.github/workflows/translations_report.yml
+++ b/.github/workflows/translations_report.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          node-version: '20'
+      - run: corepack enable
+      - run: corepack prepare pnpm@9 --activate
       - name: Get pnpm store directory
         shell: bash
         run: |
