--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -24,7 +24,7 @@ jobs:
   run_tests:
     name: Run e2e tests
     timeout-minutes: 60
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     env:
       ENVIRONMENT: ${{ github.event.inputs.env }}
       APP_NAME: ${{ github.event.inputs.app }}
@@ -75,14 +75,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-name }}
             ${{ runner.os }}-
+
       - name: Update playwright and install dependencies
         shell: bash
         run: |
-          npm install -g playwright@latest
-          npm install -D @playwright/test@latest
+          pnpm add -g playwright@latest
+          pnpm add -D @playwright/test@latest
           npx playwright install --with-deps
+
       - name: Run Playwright tests
         run: npx playwright test --trace on
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
