--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -34,6 +34,11 @@ jobs:
       DEV_PASSWORD: ${{ secrets.DEV_PASSWORD }}
       PROD_EMAIL: ${{ secrets.PROD_EMAIL }}
       PROD_PASSWORD: ${{ secrets.PROD_PASSWORD }}
+      TEST_KEYCLOAK_ADMIN_USER: ${{ secrets.TEST_KEYCLOAK_ADMIN_USER }}
+      TEST_KEYCLOAK_ADMIN_PASSWORD: ${{ secrets.TEST_KEYCLOAK_ADMIN_PASSWORD }}
+      DEV_KEYCLOAK_ADMIN_USER: ${{ secrets.DEV_KEYCLOAK_ADMIN_USER }}
+      DEV_KEYCLOAK_ADMIN_PASSWORD: ${{ secrets.DEV_KEYCLOAK_ADMIN_PASSWORD }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,13 +59,19 @@ jobs:
           ENV_PREFIX=$(echo "$ENVIRONMENT" | tr '[:lower:]' '[:upper:]') # Convert to uppercase
           EMAIL_VAR_NAME="${ENV_PREFIX}_EMAIL"
           PASSWORD_VAR_NAME="${ENV_PREFIX}_PASSWORD"
+          ADMIN_KEYCLOAK_VAR_NAME="${ENV_PREFIX}_KEYCLOAK_ADMIN_USER"
+          ADMIN_KEYCLOAK_PASSWORD_VAR_NAME="${ENV_PREFIX}_KEYCLOAK_ADMIN_PASSWORD"
 
           EMAIL="${!EMAIL_VAR_NAME}"
           PASSWORD="${!PASSWORD_VAR_NAME}"
+          ADMIN_KEYCLOAK="${!ADMIN_KEYCLOAK_VAR_NAME}"
+          ADMIN_KEYCLOAK_PASSWORD="${!ADMIN_KEYCLOAK_PASSWORD_VAR_NAME}"
 
           rm -rf .env.playwright.production
           echo "EMAIL=$EMAIL" >> .env.playwright.production
           echo "PASSWORD=$PASSWORD" >> .env.playwright.production
+          echo "ADMIN_KEYCLOAK=$ADMIN_KEYCLOAK" >> .env.playwright.production
+          echo "ADMIN_KEYCLOAK_PASSWORD=$ADMIN_KEYCLOAK_PASSWORD" >> .env.playwright.production
 
       - name: Cache node modules
         id: cache-npm
