test: update tests and improve workflow run name

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -1,4 +1,5 @@
 name: Run e2e autotests
+run-name: Run e2e autotests for ${{inputs.app}} app(s) on ${{inputs.env}} env
 on:
   workflow_dispatch:
     inputs:
