test: fix workflow

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -98,6 +98,7 @@ jobs:
           pnpm add -g playwright@latest
           pnpm add -D @playwright/test@latest
           npx playwright install --with-deps
+          pnpm add playwright-slack-report -D
 
       - name: Run Playwright tests
         run: npx playwright test --trace on
