--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -108,4 +108,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
           branch: playwright-report
-          folder: playwright-report
+          path: playwright-report/
