test: use npm to install

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -98,7 +98,7 @@ jobs:
           pnpm add -g playwright@latest
           pnpm add -D @playwright/test@latest
           npx playwright install --with-deps
-          pnpm add playwright-slack-report -D
+          npm install playwright-slack-report -D
 
       - name: Run Playwright tests
         run: npx playwright test --trace on
@@ -108,4 +108,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
           branch: playwright-report
-          path: playwright-report/
+          folder: playwright-report/
