--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@reatom/npm-react": "^3.8.6",
     "@reatom/react-v2": "^3.1.0",
     "@sentry/react": "^7.113.0",
+    "@slack/web-api": "^7.0.4",
     "@testing-library/react": "^14.2.1",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
