test: add clean up for github pages

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -108,6 +108,8 @@ jobs:
         with:
           branch: playwright-report
           folder: playwright-report/
+          clean: true
+          force: true
 
       - name: Upload report to workflow artifacts
         if: ${{ !cancelled() }}
