--- a/package.json
+++ b/package.json
@@ -213,5 +213,10 @@
     "open-cli": "^7.2.0",
     "prompts": "^2.4.2",
     "semver": "^7.6.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "react-component-keepalive-ts@1.0.8": "patches/react-component-keepalive-ts@1.0.8.patch"
+    }
   }
 }
