--- a/package.json
+++ b/package.json
@@ -92,8 +92,10 @@
     "@loaders.gl/worker-utils": "^3.4.14",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
+    "@reatom/async": "^3.15.2",
     "@reatom/core": "^3.8.3",
     "@reatom/core-v2": "^3.1.4",
+    "@reatom/hooks": "^3.5.5",
     "@reatom/logger": "^3.8.4",
     "@reatom/npm-react": "^3.8.9",
     "@reatom/react-v2": "^3.1.2",
