--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@paypal/react-paypal-js": "^8.5.0",
+    "@reatom/async": "^3.15.2",
     "@reatom/core": "^3.8.3",
     "@reatom/core-v2": "^3.1.4",
     "@reatom/logger": "^3.8.4",
