feat: add update .env.production step, fix pnpm issue

--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -17,7 +17,6 @@ jobs:
         uses: actions/setup-node@v4.0.3
         with:
           node-version: 21
-          cache: pnpm
 
       - name: Checkout
         uses: actions/checkout@v4.1.7
@@ -40,6 +39,11 @@ jobs:
       - name: Apply domain changes in config files
         run: |
           sed -i "s|https://disaster.ninja|https://${PREVIEW_API_DOMAIN}|" configs/config.default.json
+
+      - name: Update .env.production
+        run: |
+          sed -i "s|VITE_BASE_PATH=/active/|VITE_BASE_PATH=/|" .env.production
+          sed -i "s|VITE_STATIC_PATH=static/|VITE_STATIC_PATH=|" .env.production
 
   build:
     runs-on: ubuntu-24.04
