--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -10,32 +10,28 @@ env:
   DOMAIN: mr-preview-${{ github.event.number }}.konturio.surge.sh
 
 jobs:
-  setup:
+  deploy:
     runs-on: ubuntu-24.04
+    env:
+      PREVIEW_API_DOMAIN: 'test-apps-ninja02.konturlabs.com'
+
     steps:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.3
         with:
-          node-version: 21
-
-      - name: Checkout
-        uses: actions/checkout@v4.1.7
+          node-version: 20
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
         with:
           version: ^9.x.x
 
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
+
       - name: Install dependencies
         run: pnpm install
 
-  update-config:
-    runs-on: ubuntu-24.04
-    needs: setup
-    env:
-      PREVIEW_API_DOMAIN: 'test-apps-ninja02.konturlabs.com'
-
-    steps:
       - name: Apply domain changes in config files
         run: |
           sed -i "s|https://disaster.ninja|https://${PREVIEW_API_DOMAIN}|" configs/config.default.json
@@ -45,18 +41,19 @@ jobs:
           sed -i "s|VITE_BASE_PATH=/active/|VITE_BASE_PATH=/|" .env.production
           sed -i "s|VITE_STATIC_PATH=static/|VITE_STATIC_PATH=|" .env.production
 
-  build:
-    runs-on: ubuntu-24.04
-    needs: update-config
-    steps:
+      - name: Cache pnpm store
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Build
         run: pnpm build
 
-  deploy:
-    runs-on: ubuntu-24.04
-    needs: build
-
-    steps:
       - name: Surge Github Action
         uses: Mahmoudgalalz/surge-action@v0.1.6
         with:
