test: added pro user tests, fixing other e2e tests

--- a/.env.playwright
+++ b/.env.playwright
@@ -1,6 +1,8 @@
 EMAIL=test_email
 PASSWORD=test_password
 ENVIRONMENT=test
+EMAIL_PRO=test_pro_email
+PASSWORD_PRO=test_pro_password
 APP_NAME=all
 ADMIN_KEYCLOAK=test
 ADMIN_KEYCLOAK_PASSWORD=test
