--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Enable surge.sh redirects
+        run: echo '<h1>Hello, catch all</h1>' > dist/200.html
+
       - name: Deploy to surge.sh
         if: ${{ !cancelled() }}
         uses: dswistowski/surge-sh-action@v1
