feat(18772): use new /axis endpoint for MCDA (#775)
* feat(18772): new bivariate axes atom draft

* feat(18772): resource with abort controller

* feat: switch MCDALayerParameters to using new availableBivariateAxisesAtom

* chore: rename atom

* chore: rename api functions

* chore: remove duplicated type definitions

* feat(MCDA): add minQuality parameter to GET /axis request

* feat: download full MCDALayerStyle object instead of just MCDAConfig

* chore: remove commented log

* chore: axisesResource -> axesResource

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@reatom/async": "^3.15.2",
     "@reatom/core": "^3.8.3",
     "@reatom/core-v2": "^3.1.4",
+    "@reatom/hooks": "^3.5.5",
     "@reatom/logger": "^3.8.4",
     "@reatom/npm-react": "^3.8.10",
     "@reatom/react-v2": "^3.1.2",
