feat: update osm editors urls

--- a/configs/config.default.json
+++ b/configs/config.default.json
@@ -39,12 +39,12 @@
     {
       "id": "josm",
       "title": "JOSM",
-      "url": "https://www.openstreetmap.org/edit?editor=remote#map="
+      "url": "https://www.openstreetmap.org/edit?#map="
     },
     {
       "id": "id",
       "title": "iD",
-      "url": "https://www.openstreetmap.org/edit?editor=id&node=2188188227#map="
+      "url": "https://www.openstreetmap.org/edit?editor=id&#map="
     },
     {
       "id": "rapid",
@@ -56,5 +56,4 @@
   "KEYCLOAK_REALM": "kontur",
   "KEYCLOAK_CLIENT_ID": "kontur_platform",
   "SENTRY_DSN": "https://fixme@dsn.ingest.sentry.io/project-id"
-
 }
