--- a/package.json
+++ b/package.json
@@ -94,15 +94,16 @@
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@paypal/react-paypal-js": "^8.5.0",
     "@reatom/async": "^3.15.2",
-    "@reatom/core": "^3.8.3",
+    "@reatom/core": "^3.9.0",
     "@reatom/core-v2": "^3.1.4",
     "@reatom/hooks": "^3.5.5",
     "@reatom/logger": "^3.8.4",
     "@reatom/npm-react": "^3.8.10",
     "@reatom/react-v2": "^3.1.2",
-    "@sentry/react": "^7.113.0",
-    "@slack/web-api": "^7.0.4",
-    "@testing-library/react": "^14.2.1",
+    "@sentry/react": "^8.18.0",
+    "@slack/web-api": "^7.3.1",
+    "@testing-library/dom": "^10.3.2",
+    "@testing-library/react": "^16.0.0",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -115,7 +116,7 @@
     "@types/d3-interpolate": "^3.0.4",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.11",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
@@ -128,7 +129,7 @@
     "@typescript-eslint/parser": "^6.20.0",
     "@uiw/react-github-corners": "1.5.16",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^2.0.3",
     "ajv": "^8.16.0",
     "autoprefixer": "^10.4.19",
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
@@ -145,7 +146,7 @@
     "eslint-plugin-i18n-checker": "^1.4.0",
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
@@ -157,7 +158,7 @@
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-conv": "14.0.0",
-    "i18next-scanner": "^4.4.0",
+    "i18next-scanner": "^4.5.0",
     "jwt-decode": "^4.0.0",
     "lint-staged": "^15.2.7",
     "maplibre-gl": "^3.6.2",
@@ -184,8 +185,8 @@
     "react-lazily": "^0.9.2",
     "react-markdown": "^8.0.7",
     "react-promise-suspense": "^0.3.4",
-    "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1",
+    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.7.11",
     "remark-gfm": "^3.0.1",
@@ -196,17 +197,17 @@
     "superstruct": "^1.0.4",
     "surge": "^0.23.1",
     "ts-json-schema-generator": "^2.3.0",
-    "tsx": "^4.15.7",
-    "typescript": "5.4.5",
+    "tsx": "^4.16.2",
+    "typescript": "5.5.3",
     "typescript-plugin-css-modules": "^5.1.0",
     "uhtml": "^4.5.9",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "~5.3.3",
+    "vite": "~5.3.4",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.5",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0",
+    "vitest": "^2.0.3",
     "wretch": "^2.9.0"
   },
   "devDependencies": {
@@ -219,7 +220,7 @@
     "open-cli": "^7.2.0",
     "playwright-slack-report": "^1.1.81",
     "prompts": "^2.4.2",
-    "semver": "^7.6.0"
+    "semver": "^7.6.3"
   },
   "pnpm": {
     "patchedDependencies": {
