--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "react-router-dom": "^6.24.1",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.7.11",
+    "recharts": "^2.12.7",
     "remark-gfm": "^3.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^17.0.1",
