--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@turf/union": "^6.5.0",
     "@types/d3-color": "^3.1.3",
     "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-scale": "^4.0.8",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
     "@types/node": "^20.14.9",
@@ -136,6 +137,7 @@
     "cpr": "^3.0.1",
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^2.30.0",
     "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
