fix: reduce josm bbox size to be less than max allowed area

--- a/configs/config.default.json
+++ b/configs/config.default.json
@@ -44,7 +44,7 @@
     {
       "id": "josm",
       "title": "JOSM",
-      "url": "http://127.0.0.1:8111/load_and_zoom?left={left}&right={right}&top={top}&bottom={bottom}"
+      "url": "http://127.0.0.1:8111/load_and_zoom"
     },
     {
       "id": "id",
