--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,9 @@
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/ban-ts-comment": "warn",
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-expressions": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/jsx-filename-extension": [
       "warn",
