--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "jwt-decode": "^4.0.0",
     "lint-staged": "^15.2.8",
     "maplibre-gl": "^3.6.2",
+    "markdown-to-jsx": "^7.4.7",
     "mdast": "^3.0.0",
     "mdast-util-from-markdown": "^2.0.1",
     "minimist": "^1.2.8",
@@ -189,7 +190,6 @@
     "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.9.0",
-    "remark-gfm": "^3.0.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^18.0.0",
     "stylelint": "^16.2.1",
